Feature/mk exercises and criteria (#141)
* Criteria, WorkoutExercise, Validators

* CriterionQuery

* Criteria fix

* Delete import